to work at home

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,10 @@
             <div class="card-body">
                 <h5 class="card-title d-flex justify-content-center">user login</h5>
 
-                <form action="" method="post">
+                <form action="/" method="GET">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+                        <label for="Email">Email address</label>
+                        <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" name="email">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
@@ -33,11 +33,7 @@
                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div>
                     <div class="d-flex justify-content-center p-2">
-
                         <button type="submit" class="btn btn-white btn-outline-dark">login</button>
-
-
-
                     </div>
                 </form>
             </div>
