--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -13,18 +13,46 @@
 
 
     <div class="container-fluid row justify-content-center container-fluid-sm mr-0 ml-0">
-        {% for i in cards%}
+
         <div class="card d-flex justify-content-center" style="width: 18rem;">
-            <img src="/static//TarotCards/{{i}}" class="card-img-top " alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <img src="/static//TarotCards/{{cards[0]}}" class="card-img-top " alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
-        </div> {% endfor %}
+        </div>
+        <div class="card d-flex justify-content-center" style="width: 18rem;">
+            <img src="/static//TarotCards/{{cards[1]}}" class="card-img-top " alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+        <div class="card d-flex justify-content-center" style="width: 18rem;">
+            <img src="/static//TarotCards/{{cards[2]}}" class="card-img-top " alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+        <div class="card d-flex justify-content-center" style="width: 18rem;">
+            <img src="/static//TarotCards/{{cards[3]}}" class="card-img-top " alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
 
     </div>
-
+    <script>
+        function card_reveal() {
+            document.getElementById('')
+        }
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
