--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Document</title>
 </head>
 
@@ -15,15 +16,15 @@
     <div class="container-fluid row justify-content-center container-fluid-sm mr-0 ml-0">
 
         <div class="card d-flex justify-content-center ml-3 mt-3" style="width: 18rem;">
-            <img id="card-num-1" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top " alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <img id="card-num-1" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top fade-in-image-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button id="reveal-1" class="btn btn-outline-dark "onclick="card_reveal_1()">reveal</button>
+                <button id="reveal-1" onclick="card_reveal_1()" class="btn btn-outline-dark ">reveal</button>
             </div>
         </div>
         <div class="card d-flex justify-content-center ml-3 mt-3" style="width: 18rem;">
-            <img id="card-num-2" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top " alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <img id="card-num-2" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top fade-in-image-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -31,7 +32,7 @@
             </div>
         </div>
         <div class="card d-flex justify-content-center ml-3 mt-3" style="width: 18rem;">
-            <img id="card-num-3" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top " alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <img id="card-num-3" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top fade-in-image-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -39,7 +40,7 @@
             </div>
         </div>
         <div class="card d-flex justify-content-center ml-3 mt-3" style="width: 18rem;">
-            <img id="card-num-4" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top " alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <img id="card-num-4" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top fade-in-image-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -49,14 +50,15 @@
 
     </div>
     <script>
-
         function card_reveal_1() {
             document.getElementById("card-num-1").setAttribute("src", `/static//TarotCards/{{ cards[0] }}`);
-            let att = document.createAttribute("disabled")
-            att.value = "true";
-            document.getElementById("reveal-1").setAttributeNode(att)
-
-            
+            let toDisable = document.createAttribute("disabled");
+            toDisable.value = "true";
+            document.getElementById("reveal-1").setAttributeNode(toDisable);
+            // let toFade = document.createAttribute('class');
+            // toFade.value = "fade-in-image";
+            // document.getElementById('card-num-1')
+            document.getElementById("card-num-1").setAttribute("class", "fade-in-image")
         }
 
         function card_reveal_2() {
@@ -76,12 +78,11 @@
         }
 
         function card_reveal_4() {
-            document.getElementById("card-num-4").setAttribute("src", `/static//TarotCards/{{ cards[3] }}`)    
+            document.getElementById("card-num-4").setAttribute("src", `/static//TarotCards/{{ cards[3] }}`)
             let att = document.createAttribute("disabled")
             att.value = "true";
             document.getElementById("reveal-4").setAttributeNode(att)
         }
-
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
