--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,4 @@
-.fade-in-image {
+/* .fade-in-onload {
     animation: fadeIn 3s;
     -webkit-animation: fadeIn 3s;
     -moz-animation: fadeIn 3s;
@@ -49,9 +49,9 @@
     100% {
         opacity: 1;
     }
-}
+} */
 
-.fade-in-image-onload {
+.fade-in-image {
     animation: fadeIn 3s;
     -webkit-animation: fadeIn 3s;
     -moz-animation: fadeIn 3s;
