edge case fixed

--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -50,14 +50,16 @@
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <button id="reveal-4" onclick="card_reveal_4()" class="btn btn-outline-dark ">reveal</button>
-                <button id="replace_4" onclick="replaceCard_4()" disabled="true" class="btn btn-outline-dark">replace</button>
+                <button id="replace_4" onclick="replaceCard_4()" disabled="true" class="btn btn-outline-dark rep">replace</button>
             </div>
         </div>
 
     </div>
     <script>
+        let indicator = 0;
+
         function card_reveal_1() {;
-            let toEnable = document.getElementById("replace_1").removeAttribute("disabled");
+
             document.getElementById("card-num-1").setAttribute("src", `/{{ cards[0]["CARD_PATH"] }}`);
             let toDisable = document.createAttribute("disabled");
             toDisable.value = "true";
@@ -66,65 +68,116 @@
             // toFade.value = "fade-in-image";
             // document.getElementById('card-num-1')
             document.getElementById("card-num-1").setAttribute("class", "card-img-top fade-in-image")
+            indicator += 1;
+            if (indicator == 4) {
+                let toEnable = document.getElementsByClassName("rep");
+                for (let i = 0; i < toEnable.length; i++) {
+                    toEnable[i].removeAttribute("disabled")
+                }
+            }
 
         }
 
         function card_reveal_2() {
-            let toEnable = document.getElementById("replace_2").removeAttribute("disabled");
+
             document.getElementById("card-num-2").setAttribute("src", `/{{ cards[1]["CARD_PATH"] }}`)
             let att = document.createAttribute("disabled")
             console.log(att)
             att.value = "true";
             document.getElementById("reveal-2").setAttributeNode(att)
             console.log(document.getElementById("card-num-2").setAttribute("class", "card-img-top fade-in-image"))
+            indicator += 1;
+            if (indicator == 4) {
+                let toEnable = document.getElementsByClassName("rep");
+                for (let i = 0; i < toEnable.length; i++) {
+                    toEnable[i].removeAttribute("disabled")
+                }
+            }
         }
 
         function card_reveal_3() {
-            let toEnable = document.getElementById("replace_3").removeAttribute("disabled");
+
             document.getElementById("card-num-3").setAttribute("src", `/{{ cards[2]["CARD_PATH"] }}`)
             let att = document.createAttribute("disabled")
             att.value = "true";
             document.getElementById("reveal-3").setAttributeNode(att)
             document.getElementById("card-num-3").setAttribute("class", "fade-in-image")
+            indicator += 1;
+            if (indicator == 4) {
+                let toEnable = document.getElementsByClassName("rep");
+                for (let i = 0; i < toEnable.length; i++) {
+                    toEnable[i].removeAttribute("disabled")
+                }
+            }
+
         }
 
         function card_reveal_4() {
-            let toEnable = document.getElementById("replace_4").removeAttribute("disabled");
             document.getElementById("card-num-4").setAttribute("src", `/{{ cards[3]["CARD_PATH"] }}`)
             let att = document.createAttribute("disabled")
             att.value = "true";
             document.getElementById("reveal-4").setAttributeNode(att)
             document.getElementById("card-num-4").setAttribute("class", "fade-in-image")
+            indicator += 1;
+            if (indicator == 4) {
+                let toEnable = document.getElementsByClassName("rep");
+                for (let i = 0; i < toEnable.length; i++) {
+                    toEnable[i].removeAttribute("disabled")
+                }
+            }
+
         }
 
         // ---------------------------- replace card handling functions----------------------------------
 
         function replaceCard_1() {
             document.getElementById('card-num-1').setAttribute("src", `/{{ cards[4]["CARD_PATH"] }}`);
-
-
             let btnArr = document.getElementsByClassName("rep");
-
-            document.getElementById("replace_1").setAttribute("disabled", "true")
-            document.getElementById("replace_2").setAttribute("disabled", "true")
-            document.getElementById("replace_3").setAttribute("disabled", "true")
-            document.getElementById("replace_4").setAttribute("disabled", "true")
-                // for( let i=0; i < btnArr.length; i++) {
-                //     btnArr[i].setAttribute(att)
-                // }
+            // document.getElementById("replace_1").setAttribute("disabled", "true")
+            // document.getElementById("replace_2").setAttribute("disabled", "true")
+            // document.getElementById("replace_3").setAttribute("disabled", "true")
+            // document.getElementById("replace_4").setAttribute("disabled", "true")
+            for (let i = 0; i < btnArr.length; i++) {
+                btnArr[i].setAttribute("disabled", "true")
+            }
 
         }
 
         function replaceCard_2() {
             document.getElementById('card-num-2').setAttribute("src", `/{{ cards[4]["CARD_PATH"] }}`);
+            let btnArr = document.getElementsByClassName("rep");
+            // document.getElementById("replace_1").setAttribute("disabled", "true")
+            // document.getElementById("replace_2").setAttribute("disabled", "true")
+            // document.getElementById("replace_3").setAttribute("disabled", "true")
+            // document.getElementById("replace_4").setAttribute("disabled", "true")
+            for (let i = 0; i < btnArr.length; i++) {
+                btnArr[i].setAttribute("disabled", "true")
+            }
         }
 
         function replaceCard_3() {
             document.getElementById('card-num-3').setAttribute("src", `/{{ cards[4]["CARD_PATH"] }}`);
+            let btnArr = document.getElementsByClassName("rep");
+            // document.getElementById("replace_1").setAttribute("disabled", "true")
+            // document.getElementById("replace_2").setAttribute("disabled", "true")
+            // document.getElementById("replace_3").setAttribute("disabled", "true")
+            // document.getElementById("replace_4").setAttribute("disabled", "true")
+            for (let i = 0; i < btnArr.length; i++) {
+                btnArr[i].setAttribute("disabled", "true")
+            }
         }
 
         function replaceCard_4() {
+
             document.getElementById('card-num-4').setAttribute("src", `/{{ cards[4]["CARD_PATH"] }}`);
+            let btnArr = document.getElementsByClassName("rep");
+            // document.getElementById("replace_1").setAttribute("disabled", "true")
+            // document.getElementById("replace_2").setAttribute("disabled", "true")
+            // document.getElementById("replace_3").setAttribute("disabled", "true")
+            // document.getElementById("replace_4").setAttribute("disabled", "true")
+            for (let i = 0; i < btnArr.length; i++) {
+                btnArr[i].setAttribute("disabled", "true")
+            }
         }
     </script>
 
